# eggroll-pytorch

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
eggroll/: __init__.py  trainer.py
examples/: mnist_example.py  simple_example.py
tests/: COMPATIBILITY.md  README.md  __init__.py  run_all_tests.sh  test_basic.py  test_comprehensive.py  test_group_normalization.py  test_jax_comparison.py  test_jax_differences.py  test_noise_reuse.py  test_optimizers.py  test_thread_alternation.py
